--- a/client/StDBCraft.csproj
+++ b/client/StDBCraft.csproj
@@ -8,4 +8,7 @@
     <ItemGroup>
         <PackageReference Include="SpacetimeDB.ClientSDK" Version="0.9.2"/>
     </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Scripts\Entities\"/>
+    </ItemGroup>
 </Project>
